# Contratos_MJ2

./: README.md  pyproject.toml
APP/: UGPP.py
Codigo/: Test.ipynb
